--- a/inner_air/main/dev/scss/components/_button.scss
+++ b/inner_air/main/dev/scss/components/_button.scss
@@ -14,6 +14,7 @@
     transition: all 0.2s ease-in-out;
     text-transform: uppercase;
     border: none;
+    white-space: nowrap;
 
     &:hover {
         background-color: $color-light;
